# minecraft-docker-manager-lib

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  gen-docker-compose-models.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docker-image.yml
example_server_dir/gtnh/: docker-compose.yaml
example_server_dir/paper/: docker-compose.yaml
minecraft_docker_dir_watcher/: __main__.py  database.py  files.py
minecraft_docker_manager_lib/: __init__.py  instance.py  manager.py  mc_compose_file.py  utils.py
minecraft_docker_manager_lib/docker/: __init__.py  cgroup.py  compose_file.py  compose_models.py  manager.py  network.py
tests/: mcc_docker_wrapper.py  test_compose_file.py  test_instance.py  test_integration.py  test_mc_compose_file.py  test_monitoring.py  test_utils.py
