[tool.poetry]
name = "minecraft-docker-manager-lib"
version = "0.0.1-dev"
description = "A manager lib for Minecraft server in Docker container"
authors = ["xyqyear <xyqyear@gmail.com>"]
readme = "README.md"
packages = [{ include = "minecraft_docker_manager_lib" }]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
ruamel-yaml = "^0.18.6"
aiofiles = "^24.1.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
asyncer = "^0.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.3"
ipykernel = "^6.29.5"
setuptools = "^75.1.0"
datamodel-code-generator = {extras = ["http"], version = "^0.26.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
