[tool.poetry]
name = "minecraft-docker-manager-lib"
version = "0.3.3"
description = "A manager lib for Minecraft server in Docker container"
authors = ["xyqyear <xyqyear@gmail.com>"]
readme = "README.md"
packages = [{ include = "minecraft_docker_manager_lib" }]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "^24.1.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
pyyaml = "^6.0.2"
psutil = "^7.0.0"
asyncer = "^0.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.3"
ipykernel = "^6.29.5"
setuptools = "^75.1.0"
datamodel-code-generator = {extras = ["http"], version = "^0.33.0"}
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-vv --cov=minecraft_docker_manager_lib --cov-report=xml:cov.xml --cov-report=html:cov_html --cov-report=term-missing"
